CSS/styles.css
/**********  Global  **********/

/*  rework  */
$maximumyellowred: #fcbf4;

html {
  box-sizing: border-box;
}

:root {
  --shamrock: #72aa86;
  --silver: #a9abad;
  --silverish: #DEDEDE;
  --thinblue: rgba(1, 25, 54, .6);
  --coral: #FF8B61;
  --rustic: #af3800;
  --coffee: rgba(60, 55, 68, 1);
  --coffee-sub: rgba(60, 55, 68, 0.2);
  --royalblue: #011936;
  --gunmetal: #143642;
  --minty: #DAFFEF;
  --gainsboro: #d7dae5;

  /* new palette */
  --body-background: #859ca0;
  --mango: #fcbf49;
  --prussianblue: #253d5b;
  --alabaster: #F3F1E7;
  --cordovan: #984447;
  --wintergreen: #55917f;
  --prussiandark: #1b2c41;
  --danger: #C73A3E;
  --cordovana: rgba(152, 68, 71, 0.55);
  --mangoa: rgba(252, 191, 73, 0.7);
  --prussiana: rgba(37, 61, 91, 0.9);

}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    background-color: var(--body-background);
    color: black;
    font-family: Garamond, serif;
    font-size: 18px;
    margin: 0;
    position: relative;
    height: 1500px;
}

h1 {
  font-size: 70px;
}

h2 {
  font-size: 35px;
  margin-top: 0;
  margin-bottom: 0px;
}

h3 {
  margin: 30px 0 0 0;
}

h4 {
  margin: 11px auto;
}

h5 {
  margin: 0;
  font-size: 19px;
}

h1, h2 {
  font-family: Helvetica, sans-serif;
}

p {
  line-height: 1.5;
  margin: 11px 0 0px 0;
}

a {
  background: none;
  color: #f4edea;
  text-decoration: none;
  text-shadow: 2px 1px 3px var(--prussianblue), 2px 2px 2px var(--wintergreen);
}

.content-wrap {
  max-width: 950px;
  margin: 0 auto;
  padding: 60px 50px;
  overflow: hidden;
}

.container {
  display: grid;
  grid-template-columns: minmax(250px, 400px) minmax(300px, 1fr);
  grid-gap:10px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
}

/**********  Header  **********/
header {
  font-weight: 500;
  padding-top: 50px;
  position: relative;
}

header h1,
header h2 {
  color: var(--prussiandark);
  margin: 0;
}

.heading {
  display: flex;
}

.missions {
  flex-basis: 530px;
}

.profile {
  display: block;
  max-height: 175px;
  max-width: 175px;
  height: auto;
  width: auto;
  border-radius: 55%;
}

.prof-pic {
  padding-left: 2px;
  padding-right: 2px;
  flex-basis: 270px;
  flex-shrink: 4;
}

.download {
  position: absolute;
  right: 0;
  bottom: 0;
}

#oblique {
  font-style: oblique;
  font-weight: bold;
  font-size: 21px;
}


/*****  Navigation  *****/
nav {
  background-color: var(--prussianblue);
  margin-bottom: 5px;
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

nav a {
  display: inline-block;
  padding: 12px 20px;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
}

nav a:hover, .active {
  color: whitesmoke;
  text-shadow: none;
  background-color: var(--wintergreen);
}

.navbar {
  position: fixed;
  padding: 0 1rem 0 1rem;
}

.nav {
  margin: auto;
}

.nav-link {
  padding: .75rem 1.25rem;
}
/*****  Download Button  *****/
.btn {
  text-decoration: none;
  font-family: "Helvetica", sans-serif;
  font-size: 16px;
  color: var(--alabaster);
  background-color: var(--danger);
  display: inline-block;
  padding: 8px;
  text-shadow: none;
}

.btn:hover {
  color: var(--silver);
  text-shadow: 4px 5px 4px var(--thinblue);
}


/**********  Footer  **********/
footer {
  text-align:center;
}

.content-info a {
  color: var(--alabaster);
  background-color: var(--mango);
  padding: 5px 15px;
  margin-top: 10px;
  margin-right: 15px;
  display: inline-block;
  font-size: 25px;
  box-shadow: 1px 1px 4px var(--prussiandark);
 }

 .content-info a:hover {
   box-shadow: 3px 3px 8px var(--prussiana);
   background-color: var(--wintergreen);
 }

 #Contact h2, #Contact p {
   color: var(--prussianblue);
 }

 header, footer {
   background-color: var(--alabaster);
   color: var(--cordovan);
}


/**********  Work Experience  **********/
h3 ~ p {
  margin: 0;
}

.Ucase {
  text-transform: uppercase;
}

.work {
  background-color: var(--mango);
  background-image: radial-gradient(farthest-side at 83% 16%, rgba(255,255,255,0.65) , var(--mango) 90%);
}

.job-description {
  margin-bottom: 25px;
}

.job-description p:first-of-type {
  margin-top: 30px;
}

.job-description li:first-of-type {
  margin-top: -10px;
}

.training {
  margin: 5px auto;
}

.job-title {
  margin-bottom: 5px;
  font-style: italic;
  font-size: 1.2em;
}

#img-ninth {
  margin-left: 25px;
  margin-bottom: 0;
  object-fit: cover;
}


/**********  Education  **********/
.h-style {
  font-family: Helvetica, sans-serif;
}

p + h3 {
  margin-top: 30px;
}

.shrink1, .shrink2 {
  margin-top: 15px;
}

.courses {
  margin: 5px auto;
  clear: left;
 }

.education {
  background: linear-gradient(rgba(252, 191, 73, 0.25), var(--cordovana)),
  url(../images/mountaintop-education.jpg) no-repeat fixed;
  background-size: cover;
}

.tighten {
  margin-top: 17px;
}

.img-att {
  margin-left: 24px;
}

.column {
  flex: 20%;
  max-width: 20%;
  padding: 0px;
  flex-wrap: wrap;
}

.sidebside {
  float: left;
  list-style: none;
  background: url("../images/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
}

li.sidebside:first-of-type {
  margin-left: 0;
}

.ed-link {
  color: #f4edea;
  text-shadow: 2px 1px 7px var(--prussianblue), 1px 2px 4px var(--wintergreen);
}

.skill-badge {
  float: left;
  list-style-type: none;
  background: url("../images/check-mark-blue-svg.svg") no-repeat center left;
  margin: 0 15px 10px 15px;
  padding-left: 25px;
  text-shadow: 2px 3px 6px #f7f7f2;
}

.cal {
  color: var(--wintergreen);
}

.tut-prog {
  margin-left: -15px;
}

#certs-label {
  margin-left: -15px;
}

#assess-label {
  margin-left: 25px;
  margin-top: 20px;
}

#w3-head {
  margin: 15px 0 10px -15px;
}
/*****  Thumbnail Hover Effects  *****/
.cert-sm {
  border-radius: 2px;
  cursor: pointer;
  transition: 0.2s;
  margin-bottom: 10px;
}

.cert-sm:hover {
  opacity: 0.9;
  box-shadow: 0 0 2px 1px black;
}

/**********  The Modal  **********/
.modal1 {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: var(--prussianblue);
}

/*****  Modal Content (Image) *****/
.modal-inner1 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

.modal-inner2 {
  margin: auto;
  display: block;
  height: 80%;
  max-height: 700px;
}

/*****  Caption of Modal Image  *****/
#caption, #caption2 {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: var(--silverish);
  padding: 10px 0;
  height: 150px;
}

/*****  Add Animation  *****/
.modal-inner1, .modal-inner2, #caption, #caption2 {
  animation-name: zoom;
  animation-duration: 1.3s;
}

@keyframes zoom {
  from {transform: scale(0.1)}
  to {transform: scale(1) rotate(360deg)}
}

/*****  Close Button  *****/
.exit, .exit2 {
  position: absolute;
  top: 20px;
  right: 35px;
  color: var(--silverish);
  font-size: 55px;
  font-weight: bold;
  transition: 0.3s;
}

.exit:hover, .exit:focus, .exit2:hover, .exit2:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 0 2px 1px rgba(200,0,0,0.5);
}


/**********  Media Queries  **********/

@media (max-width: 489px) {
  .profile {
    max-width: 130px;
  }
}

@media (max-width: 607px) {
  .profile {
    max-width: 150px;
  }
}

@media only screen and (max-width: 700px) {
  .modal-inner1 {
    width: 100%;
  }
}

@media (max-width: 725px) {
 .prof-pic {
   max-width: 165px;
  }
}

@media(max-width: 800px) {
 .heading {
   flex-wrap: wrap;
   text-align: center;
   justify-content: space-around;
   }

 .prof-pic {
   order: -1;
  }
}

@media (max-width: 903px) {
  .profile {
    max-width: 175px;
  }
}

@media (max-width: 975px) {
 .shrink1 {
   margin-top: 19px;
   margin-bottom: 0px;
   }

  .shrink2 {
     margin-top: 0px;
     margin-bottom: 0px;
     }

  .column {
    flex: 50%;
    max-width: 50%;
  }

  .img-att {
    margin-top: 23px;
  }
}

@media (max-width: 630px) {
 .container {
   grid-template-columns: 1fr;
  }

  .img-att {
    margin: 0;
    padding: 0;
  }

  .column {
    flex: 33.33%;
    max-width: 33.33%;
  }

  .img-att {
    margin-top: 23px;
  }
}

@media (min-width: 725px) {
 .heading {
   flex-wrap: wrap;
   justify-content: flex-start;
   text-align: left;
  }
}

@media (max-width: 895px) {
  .sidebside {
    margin-left: 0px;
  }
}

@media (min-width: 920px) {
 .col-narrow {
   width: 30%;
   float: left;
   margin: 0;
}

 .col-wide {
   width: 69%;
   float: left;
   padding-left: 2px;
   margin: 0;
 }
}

@media (min-width: 976px) {
 .container2 {
   display: grid;
   grid-template-columns: minmax(250px, 400px) minmax(300px, 1fr);
   grid-gap: 10px;
   }
}

@media only screen and (min-width: 1100px) {
  h1 {
    font-size: 75px;
  }
  h2 {
    font-size: 37px;
  }
  body {
    font-size: 19px;
  }
  .nav-link {
    font-size: 23px;
  }
}

